--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,8 @@
 name: flutter_gaussian_splatter
 description: Flutter Gaussian Splatter
+homepage: https://wearetoni.com
+repository: https://github.com/toni-experience-software/flutter_gaussian_splatter
+issue_tracker: https://github.com/toni-experience-software/flutter_gaussian_splatter/issues
 version: 0.1.0
 
 
